Fix navbar spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -112,6 +112,7 @@ nav ul {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  margin: 20px 0;
 }
 
 nav ul li {
